Fix grid tickbox alignment

--- a/stroom-app/src/main/resources/ui/css/celltable/DataGrid.css
+++ b/stroom-app/src/main/resources/ui/css/celltable/DataGrid.css
@@ -87,6 +87,10 @@
 	overflow-x: hidden;
 }
 
+.dataGridCell .svgCell-button {
+	vertical-align: middle;
+}
+
 .dataGridResizableCell {
 	border-right: 5px solid transparent;
 	white-space: nowrap;
